--- a/src/app.css
+++ b/src/app.css
@@ -3,15 +3,15 @@
 @tailwind components;
 @tailwind utilities;
 
-/* h1 { */
-/* 	@apply text-4xl font-bold; */
-/* } */
-/* h2 { */
-/* 	@apply text-3xl font-bold; */
-/* } */
-/* h3 { */
-/* 	@apply text-2xl font-bold; */
-/* } */
-/* h4 { */
-/* 	@apply text-xl font-bold; */
-/* } */
+h1 {
+	@apply text-4xl;
+}
+h2 {
+	@apply text-3xl;
+}
+h3 {
+	@apply text-2xl;
+}
+h4 {
+	@apply text-xl;
+}
